fixing users index page so alignment is correct

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,17 @@
  @import "bootstrap";
  @import "*";
 
+ .container {
+    position: relative;
+  }
+  #container canvas, #overlay {
+    position: absolute;
+  }
+  canvas {
+    border: 1px solid black;
+  }
+
+
  .space_from_top {
   position: relative;
   top: 30px;
