--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,10 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#form {
-  padding-top: 40px;
-}
-
-.height-lg {
-    height: 375px;
-}
+// #form {
+//   padding-top: 40px;
+// }
+//
+// .height-lg {
+//     height: 375px;
+// }
